base/src/test/resources/failure/patterns/selection-failure.aya.txt
In file $FILE:8:6 ->

  6 |  | A, suc m => vcons A (Vect A m)
  7 | def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil
            ^--^

Error: Cannot match with
         vnil
       as index unification is blocked for type
         Vect A n

In file $FILE:9:6 ->

  7 | def mapImpl {A B : Type} {n : Nat} (f : Pi A -> B) (xs : Vect A n) : Vect B n
  8 |  | f, vnil => vnil
  9 |  | f, vcons x xs => _
            ^--------^

Error: Cannot match with
         vcons x xs
       as index unification is blocked for type
         Vect A n

2 error(s), 0 warning(s).
What are you doing?
